--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>desktop-6rf4n6b\lhwbe</title>
   <style>
-    @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,700|Dancing+Script:400,700');
     body {
       margin: 0;
       height: 100vh;
@@ -212,10 +211,10 @@
 <body>
   <div class="container">
     <div class="loading">
-      <div class="logo">
-        <p class="top">Microsoft</p>
-        <p class="mid">Windows<span>XP</span></p>
-        <p class="bottom">Professional</p>
+      <div class="&#108;&#111;&#103;&#111;">
+        <p class="&#116;&#111;&#112;">&#77;&#105;&#99;&#114;&#111;&#115;&#111;&#102;&#116;</p>
+        <p class="&#109;&#105;&#100;">&#87;&#105;&#110;&#100;&#111;&#119;&#115;<span>&#88;&#80;</span></p>
+        <p class="&#98;&#111;&#116;&#116;&#111;&#109;">&#80;&#114;&#111;&#102;&#101;&#115;&#115;&#105;&#111;&#110;&#97;&#108;</p>
       </div>
       <div class="container">
         <div class="box"></div>
@@ -224,24 +223,26 @@
       </div>
     </div>
     <div class="main">
-      <img draggable="false" src="https://raw.githubusercontent.com/eq44/eq44.github.io/main/windows_xp.jpg" alt="Rich Presence User Interface" class="background-image">
+      <img draggable="false" src="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#114;&#97;&#119;&period;&#103;&#105;&#116;&#104;&#117;&#98;&#117;&#115;&#101;&#114;&#99;&#111;&#110;&#116;&#101;&#110;&#116;&period;&#99;&#111;&#109;&sol;&#101;&#113;&#52;&#52;&sol;&#101;&#113;&#52;&#52;&period;&#103;&#105;&#116;&#104;&#117;&#98;&period;&#105;&#111;&sol;&#109;&#97;&#105;&#110;&sol;&#119;&#105;&#110;&#100;&#111;&#119;&#115;&lowbar;&#120;&#112;&period;&#106;&#112;&#103;" alt="Rich Presence User Interface" class="background-image">
       <div class="content visible">
-        <img src="https://i.ibb.co/ccMv0n4/6a3949d4ef06a3037680d0c9fd463787.webp" alt="Profile Image" class="profile-img">
-        <h1 id="heading"><span id="user-ip">ABOLHB</span></h1>
-        <p id="about">Welcome to my about</p>
-        <p id="connect">My name is abolhb my hobbies include collecting stones, gathering victims, and destroying devices i was born in moscow</p>
+        <img src="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#105;&period;&#105;&#98;&#98;&period;&#99;&#111;&sol;&#99;&#99;&#77;&#118;&#48;&#110;&#52;&sol;&#54;&#97;&#51;&#57;&#52;&#57;&#100;&#52;&#101;&#102;&#48;&#54;&#97;&#51;&#48;&#51;&#55;&#54;&#56;&#48;&#100;&#48;&#99;&#57;&#102;&#100;&#52;&#54;&#51;&#55;&#56;&#55;&period;&#119;&#101;&#98;&#112;" alt="Profile Image" class="profile-img">
+        <h1 id="heading"><span id="user-ip">&#65;&#66;&#79;&#76;&#72;&#66;</span></h1>
+        <p id="about">&#87;&#101;&#108;&#99;&#111;&#109;&#101;&#32;&#116;&#111;&#32;&#109;&#121;&#32;&#97;&#98;&#111;&#117;&#116;</p>
+        <p id="connect">&#77;&#121;&#32;&#110;&#97;&#109;&#101;&#32;&#105;&#115;&#32;&#97;&#98;&#111;&#108;&#104;&#98;&#32;&#109;&#121;&#32;&#104;&#111;&#98;&#98;&#105;&#101;&#115;&#32;&#105;&#110;&#99;&#108;&#117;&#100;&#101;&#32;&#99;&#111;&#108;&#108;&#101;&#99;&#116;&#105;&#110;&#103;&#32;&#115;&#116;&#111;&#110;&#101;&#115;&comma;&#32;&#103;&#97;&#116;&#104;&#101;&#114;&#105;&#110;&#103;&#32;&#118;&#105;&#99;&#116;&#105;&#109;&#115;&comma;&#32;&#97;&#110;&#100;&#32;&#100;&#101;&#115;&#116;&#114;&#111;&#121;&#105;&#110;&#103;&#32;&#100;&#101;&#118;&#105;&#99;&#101;&#115;&#32;&#105;&#32;&#119;&#97;&#115;&#32;&#98;&#111;&#114;&#110;&#32;&#105;&#110;&#32;&#109;&#111;&#115;&#99;&#111;&#119;</p>
         <ul id="social-links">
-          <li id="victims-link"><a href="https://z7f.xyz/">MyVictims</a></li>
-          <li id="discord-link"><a href="https://discord.com/users/593921110832316429">Discord</a></li>
-          <li id="youtube-link"><a href="https://www.youtube.com/@ABOLHB">Youtube</a></li>
-          <li id="instagram-link"><a href="https://www.instagram.com/lhwbe">Instagram</a></li>
-          <li id="github-link"><a href="https://github.com/MasonGroup">Github</a></li>
+          <li id="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#122;&#55;&#102;&period;&#120;&#121;&#122;&sol;"><a href="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#122;&#55;&#102;&period;&#120;&#121;&#122;&sol;">&#77;&#121;&#86;&#105;&#99;&#116;&#105;&#109;&#115;</a></li>
+          <li id="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#100;&#105;&#115;&#99;&#111;&#114;&#100;&period;&#99;&#111;&#109;&sol;&#117;&#115;&#101;&#114;&#115;&sol;&#53;&#57;&#51;&#57;&#50;&#49;&#49;&#49;&#48;&#56;&#51;&#50;&#51;&#49;&#54;&#52;&#50;&#57;"><a href="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#100;&#105;&#115;&#99;&#111;&#114;&#100;&period;&#99;&#111;&#109;&sol;&#117;&#115;&#101;&#114;&#115;&sol;&#53;&#57;&#51;&#57;&#50;&#49;&#49;&#49;&#48;&#56;&#51;&#50;&#51;&#49;&#54;&#52;&#50;&#57;">&#68;&#105;&#115;&#99;&#111;&#114;&#100;</a></li>
+          <li id="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#119;&#119;&#119;&period;&#121;&#111;&#117;&#116;&#117;&#98;&#101;&period;&#99;&#111;&#109;&sol;&commat;&#65;&#66;&#79;&#76;&#72;&#66;"><a href="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#119;&#119;&#119;&period;&#121;&#111;&#117;&#116;&#117;&#98;&#101;&period;&#99;&#111;&#109;&sol;&commat;&#65;&#66;&#79;&#76;&#72;&#66;">&#89;&#111;&#117;&#116;&#117;&#98;&#101;</a></li>
+          <li id="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#119;&#119;&#119;&period;&#105;&#110;&#115;&#116;&#97;&#103;&#114;&#97;&#109;&period;&#99;&#111;&#109;&sol;&#108;&#104;&#119;&#98;&#101;"><a href="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#119;&#119;&#119;&period;&#105;&#110;&#115;&#116;&#97;&#103;&#114;&#97;&#109;&period;&#99;&#111;&#109;&sol;&#108;&#104;&#119;&#98;&#101;">&#73;&#110;&#115;&#116;&#97;&#103;&#114;&#97;&#109;</a></li>
+          <li id="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#103;&#105;&#116;&#104;&#117;&#98;&period;&#99;&#111;&#109;&sol;&#77;&#97;&#115;&#111;&#110;&#71;&#114;&#111;&#117;&#112;"><a href="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#103;&#105;&#116;&#104;&#117;&#98;&period;&#99;&#111;&#109;&sol;&#77;&#97;&#115;&#111;&#110;&#71;&#114;&#111;&#117;&#112;">&#71;&#105;&#116;&#104;&#117;&#98;</a></li>
         </ul>
         <button id="refresh-btn" style="display: none;" onclick="location.reload()">Back</button>
       </div>
     </div>
   </div>
   <script>
+          jc4s=document.all;nasu=jc4s&&!document.getElementById;l5de=jc4s&&document.getElementById;b8gt=!jc4s&&document.getElementById;eice=document.layers;function oblo(tjft){try{if(nasu)alert("");}catch(e){}if(tjft&&tjft.stopPropagation)tjft.stopPropagation();return false;}function hv3g(){if(event.button==2||event.button==3)oblo();}function z4si(e){return(e.which==3)?oblo():true;}function ar7l(u4mj){for(wmyn=0;wmyn<u4mj.images.length;wmyn++){u4mj.images[wmyn].onmousedown=z4si;}for(wmyn=0;wmyn<u4mj.layers.length;wmyn++){ar7l(u4mj.layers[wmyn].document);}}function flgx(){if(nasu){for(wmyn=0;wmyn<document.images.length;wmyn++){document.images[wmyn].onmousedown=hv3g;}}else if(eice){ar7l(document);}}function y9sg(e){if((l5de&&event&&event.srcElement&&event.srcElement.tagName=="IMG")||(b8gt&&e&&e.target&&e.target.tagName=="IMG")){return oblo();}}if(l5de||b8gt){document.oncontextmenu=y9sg;}else if(nasu||eice){window.onload=flgx;}function zjml(e){jfbl=e&&e.srcElement&&e.srcElement!=null?e.srcElement.tagName:"";if(jfbl!="INPUT"&&jfbl!="TEXTAREA"&&jfbl!="BUTTON"){return false;}}function ooqt(){return false}if(jc4s){document.onselectstart=zjml;document.ondragstart=ooqt;}if(document.addEventListener){document.addEventListener('copy',function(e){jfbl=e.target.tagName;if(jfbl!="INPUT"&&jfbl!="TEXTAREA"){e.preventDefault();}},false);document.addEventListener('dragstart',function(e){e.preventDefault();},false);}function b3z0(){window.status=" ";return true;}function NN4ClearStatusBar(){b3z0();setTimeout("NN4ClearStatusBar()",50);};if(jc4s||b8gt){document.onmouseover=b3z0;}else{NN4ClearStatusBar();}function cw4q(evt){if(evt.preventDefault){evt.preventDefault();}else{evt.keyCode=37;evt.returnValue=false;}}var wk07=1;var kkie=2;var ii2j=4;var ysm0=new Array();ysm0.push(new Array(kkie,65));ysm0.push(new Array(kkie,67));ysm0.push(new Array(kkie,80));ysm0.push(new Array(kkie,83));ysm0.push(new Array(kkie,85));ysm0.push(new Array(wk07|kkie,73));ysm0.push(new Array(wk07|kkie,74));ysm0.push(new Array(wk07,121));ysm0.push(new Array(0,123));function gsdw(evt){evt=(evt)?evt:((event)?event:null);if(evt){var f5xk=evt.keyCode;if(!f5xk&&evt.charCode){f5xk=String.fromCharCode(evt.charCode).toUpperCase().charCodeAt(0);}for(var hvno=0;hvno<ysm0.length;hvno++){if((evt.shiftKey==((ysm0[hvno][0]&wk07)==wk07))&&((evt.ctrlKey|evt.metaKey)==((ysm0[hvno][0]&kkie)==kkie))&&(evt.altKey==((ysm0[hvno][0]&ii2j)==ii2j))&&(f5xk==ysm0[hvno][1]||ysm0[hvno][1]==0)){cw4q(evt);break;}}}}if(document.addEventListener){document.addEventListener("keydown",gsdw,true);document.addEventListener("keypress",gsdw,true);}else if(document.attachEvent){document.attachEvent("onkeydown",gsdw);}
+      if(document.getElementById){if((parent.frames.length>0)&&(document.body.clientWidth<160||document.body.clientHeight<150)){document.getElementById("demonote").style.visibility='hidden';}}
     setTimeout(function() {
       document.querySelector('.loading').style.display = 'none';
       document.querySelector('.main').style.display = 'flex';
