--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en"><head>
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/eq44/eq44.github.io/main/abolhb.ico">
   <meta property="og:title" content="whoami">
@@ -210,11 +209,11 @@
 </head>
 <body>
   <div class="container">
-    <div class="loading">
-      <div class="&#108;&#111;&#103;&#111;">
-        <p class="&#116;&#111;&#112;">&#77;&#105;&#99;&#114;&#111;&#115;&#111;&#102;&#116;</p>
-        <p class="&#109;&#105;&#100;">&#87;&#105;&#110;&#100;&#111;&#119;&#115;<span>&#88;&#80;</span></p>
-        <p class="&#98;&#111;&#116;&#116;&#111;&#109;">&#80;&#114;&#111;&#102;&#101;&#115;&#115;&#105;&#111;&#110;&#97;&#108;</p>
+    <div class="loading" style="display: none;">
+      <div class="logo">
+        <p class="top">Stalinsoft</p>
+        <p class="mid">Blindows<span>soviet</span></p>
+        <p class="bottom">Professional</p>
       </div>
       <div class="container">
         <div class="box"></div>
@@ -222,19 +221,19 @@
         <div class="box"></div>
       </div>
     </div>
-    <div class="main">
-      <img draggable="false" src="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#114;&#97;&#119;&period;&#103;&#105;&#116;&#104;&#117;&#98;&#117;&#115;&#101;&#114;&#99;&#111;&#110;&#116;&#101;&#110;&#116;&period;&#99;&#111;&#109;&sol;&#101;&#113;&#52;&#52;&sol;&#101;&#113;&#52;&#52;&period;&#103;&#105;&#116;&#104;&#117;&#98;&period;&#105;&#111;&sol;&#109;&#97;&#105;&#110;&sol;&#119;&#105;&#110;&#100;&#111;&#119;&#115;&lowbar;&#120;&#112;&period;&#106;&#112;&#103;" alt="Rich Presence User Interface" class="background-image">
+    <div class="main loaded" style="display: flex;">
+      <img draggable="false" src="https://raw.githubusercontent.com/eq44/eq44.github.io/main/windows_xp.jpg" alt="Rich Presence User Interface" class="background-image">
       <div class="content visible">
-        <img src="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#105;&period;&#105;&#98;&#98;&period;&#99;&#111;&sol;&#99;&#99;&#77;&#118;&#48;&#110;&#52;&sol;&#54;&#97;&#51;&#57;&#52;&#57;&#100;&#52;&#101;&#102;&#48;&#54;&#97;&#51;&#48;&#51;&#55;&#54;&#56;&#48;&#100;&#48;&#99;&#57;&#102;&#100;&#52;&#54;&#51;&#55;&#56;&#55;&period;&#119;&#101;&#98;&#112;" alt="Profile Image" class="profile-img">
-        <h1 id="heading"><span id="user-ip">&#65;&#66;&#79;&#76;&#72;&#66;</span></h1>
-        <p id="about">&#87;&#101;&#108;&#99;&#111;&#109;&#101;&#32;&#116;&#111;&#32;&#109;&#121;&#32;&#97;&#98;&#111;&#117;&#116;</p>
-        <p id="connect">&#77;&#121;&#32;&#110;&#97;&#109;&#101;&#32;&#105;&#115;&#32;&#97;&#98;&#111;&#108;&#104;&#98;&#32;&#109;&#121;&#32;&#104;&#111;&#98;&#98;&#105;&#101;&#115;&#32;&#105;&#110;&#99;&#108;&#117;&#100;&#101;&#32;&#99;&#111;&#108;&#108;&#101;&#99;&#116;&#105;&#110;&#103;&#32;&#115;&#116;&#111;&#110;&#101;&#115;&comma;&#32;&#103;&#97;&#116;&#104;&#101;&#114;&#105;&#110;&#103;&#32;&#118;&#105;&#99;&#116;&#105;&#109;&#115;&comma;&#32;&#97;&#110;&#100;&#32;&#100;&#101;&#115;&#116;&#114;&#111;&#121;&#105;&#110;&#103;&#32;&#100;&#101;&#118;&#105;&#99;&#101;&#115;&#32;&#105;&#32;&#119;&#97;&#115;&#32;&#98;&#111;&#114;&#110;&#32;&#105;&#110;&#32;&#109;&#111;&#115;&#99;&#111;&#119;</p>
+        <img src="https://i.ibb.co/ccMv0n4/6a3949d4ef06a3037680d0c9fd463787.webp" alt="Profile Image" class="profile-img">
+        <h1 id="heading"><span id="user-ip">ABOLHB</span></h1>
+        <p id="about">Welcome to my about</p>
+        <p id="connect">My name is abolhb my hobbies include collecting stones, gathering victims, and destroying devices i was born in moscow</p>
         <ul id="social-links">
-          <li id="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#122;&#55;&#102;&period;&#120;&#121;&#122;&sol;"><a href="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#122;&#55;&#102;&period;&#120;&#121;&#122;&sol;">&#77;&#121;&#86;&#105;&#99;&#116;&#105;&#109;&#115;</a></li>
-          <li id="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#100;&#105;&#115;&#99;&#111;&#114;&#100;&period;&#99;&#111;&#109;&sol;&#117;&#115;&#101;&#114;&#115;&sol;&#53;&#57;&#51;&#57;&#50;&#49;&#49;&#49;&#48;&#56;&#51;&#50;&#51;&#49;&#54;&#52;&#50;&#57;"><a href="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#100;&#105;&#115;&#99;&#111;&#114;&#100;&period;&#99;&#111;&#109;&sol;&#117;&#115;&#101;&#114;&#115;&sol;&#53;&#57;&#51;&#57;&#50;&#49;&#49;&#49;&#48;&#56;&#51;&#50;&#51;&#49;&#54;&#52;&#50;&#57;">&#68;&#105;&#115;&#99;&#111;&#114;&#100;</a></li>
-          <li id="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#119;&#119;&#119;&period;&#121;&#111;&#117;&#116;&#117;&#98;&#101;&period;&#99;&#111;&#109;&sol;&commat;&#65;&#66;&#79;&#76;&#72;&#66;"><a href="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#119;&#119;&#119;&period;&#121;&#111;&#117;&#116;&#117;&#98;&#101;&period;&#99;&#111;&#109;&sol;&commat;&#65;&#66;&#79;&#76;&#72;&#66;">&#89;&#111;&#117;&#116;&#117;&#98;&#101;</a></li>
-          <li id="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#119;&#119;&#119;&period;&#105;&#110;&#115;&#116;&#97;&#103;&#114;&#97;&#109;&period;&#99;&#111;&#109;&sol;&#108;&#104;&#119;&#98;&#101;"><a href="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#119;&#119;&#119;&period;&#105;&#110;&#115;&#116;&#97;&#103;&#114;&#97;&#109;&period;&#99;&#111;&#109;&sol;&#108;&#104;&#119;&#98;&#101;">&#73;&#110;&#115;&#116;&#97;&#103;&#114;&#97;&#109;</a></li>
-          <li id="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#103;&#105;&#116;&#104;&#117;&#98;&period;&#99;&#111;&#109;&sol;&#77;&#97;&#115;&#111;&#110;&#71;&#114;&#111;&#117;&#112;"><a href="&#104;&#116;&#116;&#112;&#115;&colon;&sol;&sol;&#103;&#105;&#116;&#104;&#117;&#98;&period;&#99;&#111;&#109;&sol;&#77;&#97;&#115;&#111;&#110;&#71;&#114;&#111;&#117;&#112;">&#71;&#105;&#116;&#104;&#117;&#98;</a></li>
+          <li id="https://z7f.xyz/"><a href="https://z7f.xyz/">MyVictims</a></li>
+          <li id="https://discord.com/users/593921110832316429"><a href="https://discord.com/users/593921110832316429">Discord</a></li>
+          <li id="https://www.youtube.com/@ABOLHB"><a href="https://www.youtube.com/@ABOLHB">Youtube</a></li>
+          <li id="https://www.instagram.com/lhwbe"><a href="https://www.instagram.com/lhwbe">Instagram</a></li>
+          <li id="https://github.com/MasonGroup"><a href="https://github.com/MasonGroup">Github</a></li>
         </ul>
         <button id="refresh-btn" style="display: none;" onclick="location.reload()">Back</button>
     </div>
@@ -252,5 +251,4 @@
       }, 300);
     }, 3000); 
 </script>
-</body>
-</html>
+</div></div></body></html>
